--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@
     <!-- Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pochaevsk&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet"> -->
 
     <!-- CSS-->
     <link href="css/styles.css" rel="stylesheet" />
@@ -36,7 +46,7 @@
 
 </head>
 
-<body id="page-top" onload="window.scrollTo(0, 0)">
+<body id="page-top" onload="window.scrollTo(0, 0)" style="background-color: #f8f9fa;">
     <!-- pembukaan -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-fullscreen">
@@ -45,15 +55,18 @@
                     <div class="row justify-content-center mt-0 text-center h-100" id="front-image-container">
                         <div class="flex col-md-6 col-12 mt-auto mb-auto" id="front-text">
 
-                            <p style="color: #5b472e;"><small>The Wedding of</small></p>
+                            <p class="dm-serif-text-regular" style="color:rgb(240, 164, 23);">The Wedding of</p>
                             <h1 id="main-text" class="font-dancing mb-2 fade-in-text"
                                 style="font-size: 50px; margin: 0; line-height: 1.1; color: #5b472e;">
-                                Alpian Sugandi<br />&<br /> Vina Sugandi
+                                Alpian Sugandi<br />
+                                <span class="playfair-uniquifier" style="font-size: 35px; margin: 0; line-height: 1.1; color: #5b472e;">&</span><br />
+                                Vina Permatasari
                             </h1>
+
                             <small class="mt-3">Minggu, 12 Oktober 2025</small>
                             <hr class="border-secondary w-50 mx-auto" />
                             <p id="tamu">Kepada Yth.</p>
-                            <p id="nama-tamu" class="font-nama-tamu"></p>
+                            <p id="nama-tamu" class="font-nama-tamu">Nisa & Pasangan</p>
 
 
                             <button type="button" class="btn bg-berem btn-secondary text-white rounded-4"
@@ -174,7 +187,7 @@
             </div>
             <!-- Simbol & di tengah -->
             <div class="d-flex justify-content-center align-items-center" data-aos="zoom-in" data-aos-duration="1000">
-                <h1 class="judul-nama-pengantin fade-in-text" style="margin: 0 20px;">&</h1>
+                <h1 class="judul-nama-pengantin2 fade-in-text" style="margin: 0 20px;">&</h1>
             </div>
             <!-- Container untuk foto & dekorasi -->
             <div class="container text-center position-relative" style="height: 500px;" data-aos="zoom-in"
@@ -195,10 +208,10 @@
 
                     <!-- Nama Pengantin: Pindahkan ke dalam container -->
                     <h1 class="judul-nama-pengantin fade-in-text" style="margin-top: 70px;">
-                        Vina
+                        Vina Permatasari
                     </h1>
-                    <p style="color: #333; font-family: 'DM Serif Text', serif;">Putri Pertama dari 2 Bersaudara dari
-                        Bapak Sarbidi & Ibu Jamilah</p>
+                    <p style="color: #333; font-family: 'DM Serif Text', serif;">Putri Ke-empat dari 5 Bersaudara dari
+                        Bapak Alaudin (Alm) & Ibu Lilis Suryani</p>
                 </div>
 
                 <!-- Bunga kiri -->
@@ -212,45 +225,83 @@
             </div><br>
 
             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#BF9264"
-                class="bi bi-envelope-heart-fill" data-aos="zoom-in" data-aos-duration="1000" viewBox="0 0 16 16">
-                <path
-                    d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555l-4.2 2.568a2.785 2.785 0 0 0-.051-.105c-.666-1.3-2.363-1.917-3.699-1.25-1.336-.667-3.033-.05-3.699 1.25l-.05.105L.05 3.555ZM11.584 8.91a4.694 4.694 0 0 1-.073.139L16 11.8V4.697l-4.003 2.447c.027.562-.107 1.163-.413 1.767Zm-4.135 3.05c-1.048-.693-1.84-1.39-2.398-2.082L.19 12.856A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144L10.95 9.878c-.559.692-1.35 1.389-2.398 2.081L8 12.324l-.551-.365ZM4.416 8.91c-.306-.603-.44-1.204-.413-1.766L0 4.697v7.104l4.49-2.752a4.742 4.742 0 0 1-.074-.138Z" />
-                <path d="M8 5.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z" />
+                class="bi bi-clock-fill" viewBox="0 0 16 16">
+                <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1z" />
+                <path d="M8 4a.5.5 0 0 1 .5.5v3h2a.5.5 0 0 1 0 1h-2.5a.5.5 0 0 1-.5-.5v-3A.5.5 0 0 1 8 4z" />
             </svg>
-            <p class="font-header eb-garamond-uniquifier" style="font-size: 36px !important;" data-aos="zoom-in"
+            <p class="font-header pochaevsk-regular" style="font-size: 36px !important;" data-aos="zoom-in"
                 data-aos-duration="1000">
                 Save The Date
             </p>
             <div class="invitation-container" data-aos="zoom-in" data-aos-duration="1000">
                 <div class="left-date">
-                    <h4>MINGGU</h4>
-                    <h1>12</h1>
+                    <h4>JUM'AT</h4>
+                    <h1>10</h1>
                     <p>OKTOBER 2025</p>
                 </div>
 
                 <div class="middle-content">
-                    <h3>Resepsi Pernikahan</h3>
-                    <p>08.00 – Selesai</p>
+                    <h3>Akad Pernikahan</h3>
+                    <p style="font-size : 14px;">10.00 – Selesai</p>
                     <hr style="margin: 10px auto; width: 60%; border: 0.5px solid #999;">
                     <p>
-                        Jalan D.I Panjaitan Lr. Lama<br>
-                        Kelurahan Bagus Kuning Kecamatan Plaju<br>
+                        Jalan Demak<br>
+                        Kelurahan Seberang Ulu 1 Kecamatan Kertapati<br>
                         Kota Palembang
                     </p>
                 </div>
+                <div class="right-date">
+                    <div class="map-frame">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.30287199016!2d104.75670347359673!3d-3.0130165969629217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b9de12622edb3%3A0x34bb203d3db418d6!2sJl.%20Demak%2C%20Kecamatan%20Seberang%20Ulu%20I%2C%20Kota%20Palembang%2C%20Sumatera%20Selatan%2030257!5e0!3m2!1sid!2sid!4v1751017274317!5m2!1sid!2sid"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+
+                </div>
             </div>
-            <!-- Bagian Bawah: Maps -->
-            <div class="map-box" data-aos="zoom-in" data-aos-duration="1000">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.37775251757!2d104.80948357359667!3d-2.992488896983538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b77d9b54b7a91%3A0xbcccb8a47d7e9ea6!2sSMP%20Negeri%2056%20Palembang!5e0!3m2!1sid!2sid!4v1750157243667!5m2!1sid!2sid"
-                    loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+            <div class="invitation-container" data-aos="zoom-in" data-aos-duration="1000">
+            <div class="left-date">
+                <h4>MINGGU</h4>
+                <h1>12</h1>
+                <p>OKTOBER 2025</p>
+            </div>
+
+            <div class="middle-content">
+                <h3>Resepsi Pernikahan</h3>
+                <p style="font-size : 14px;">08.00 – Selesai</p>
+                <hr style="margin: 10px auto; width: 60%; border: 0.5px solid #999;">
+                <p>
+                    Jalan D.I Panjaitan Lr. Lama<br>
+                    Kelurahan Bagus Kuning Kecamatan Plaju<br>
+                    Kota Palembang
+                </p>
+            </div>
+            <div class="right-date">
+                <div class="map-frame">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.37775251757!2d104.80948357359667!3d-2.992488896983538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b77d9b54b7a91%3A0xbcccb8a47d7e9ea6!2sSMP%20Negeri%2056%20Palembang!5e0!3m2!1sid!2sid!4v1751017180314!5m2!1sid!2sid"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+
             </div>
         </div>
+        </div>      
     </section>
     <section class="rekening-section py-5 text-center" id="rekening" style="background: #f8f9fa;">
         <div class="container">
-            <h1 class="judul-nama-pengantin fade-in-text text-center" data-aos="zoom-in" data-aos-duration="1000">
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#BF9264"
+                class="bi bi-envelope-heart-fill" data-aos="zoom-in" data-aos-duration="1000" viewBox="0 0 16 16">
+                <path data-aos="zoom-in" data-aos-duration="1000"
+                    d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555l-4.2 2.568a2.785 2.785 0 0 0-.051-.105c-.666-1.3-2.363-1.917-3.699-1.25-1.336-.667-3.033-.05-3.699 1.25l-.05.105L.05 3.555ZM11.584 8.91a4.694 4.694 0 0 1-.073.139L16 11.8V4.697l-4.003 2.447c.027.562-.107 1.163-.413 1.767Zm-4.135 3.05c-1.048-.693-1.84-1.39-2.398-2.082L.19 12.856A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144L10.95 9.878c-.559.692-1.35 1.389-2.398 2.081L8 12.324l-.551-.365ZM4.416 8.91c-.306-.603-.44-1.204-.413-1.766L0 4.697v7.104l4.49-2.752a4.742 4.742 0 0 1-.074-.138Z" />
+                <path d="M8 5.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z" />
+            </svg>
+            <h1 class="pochaevsk-regular fade-in-text text-center" data-aos="zoom-in" data-aos-duration="1000">
                 Love Gift
             </h1>
             <p data-aos="zoom-in" data-aos-duration="1000">Doa Restu Anda merupakan karunia yang sangat berarti bagi
@@ -263,7 +314,7 @@
                             <img src="assets/img/bca.svg" alt="Logo Bank BCA" class="mb-3" style="height: 40px;">
                             <p class="card-text mb-1">No. Rekening</p>
                             <strong class="fs-5" id="rekeningBCA">1234567890</strong>
-                            <p class="mb-2">a.n. Vina Sugandi</p>
+                            <p class="mb-2">a.n. Vina Permatasi</p>
                             <button class="btn btn-outline-secondary btn-sm"
                                 onclick="salinRekening('rekeningBCA')">Salin No.Rek</button>
                         </div>
@@ -301,7 +352,7 @@
             <div class="wish-form-container d-flex align-items-center p-5 rounded-5 shadow-sm"
                 style="background-color: rgba(255, 255, 255, 0.85);">
                 <div class="wish-form">
-                    <h1 class="judul-nama-pengantin fade-in-text text-center">
+                    <h1 class="pochaevsk-regular fade-in-text text-center">
                         Do'a dan Ucapan
                     </h1>
                     <form>
@@ -313,7 +364,7 @@
                         <textarea name="message" id="message" placeholder="Tulis ucapan & doa" required
                             minlength="8"></textarea>
 
-                        <button type="submit">Kirim</button>
+                        <button type="submit" style="background-color: #3c2f2f;">Kirim</button>
                     </form>
                 </div>
             </div>
@@ -322,17 +373,17 @@
                 <hr />
                 <ul aria-label="list komentar"></ul>
                 <hr style="margin-top: 1rem" />
-                <div class="button-grup">
+                <!-- <div class="button-grup">
                     <button>
                         <i class="bx bxs-left-arrow-circle"></i>
                         <span>Prev</span>
                     </button>
-                    <span class="page-number">1</span>
+                    <span class="page-number"></span>
                     <button>
                         <span>Next</span>
                         <i class="bx bxs-right-arrow-circle"></i>
                     </button>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="py-5">
@@ -376,7 +427,7 @@
             const scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
 
             // Override scroll event supaya posisi scroll tetap di tempat
-            window.onscroll = function () {
+            window.onscroll = function() {
                 window.scrollTo(scrollTop, scrollLeft);
             }
 
@@ -399,7 +450,7 @@
             isPlaying = true;
         }
 
-        audioIconWrapper.onclick = function () {
+        audioIconWrapper.onclick = function() {
             if (isPlaying) {
                 song.pause();
                 audioIcon.classList.remove('bi-disc');
@@ -414,7 +465,7 @@
         }
 
         // Modal show on load
-        window.onload = function () {
+        window.onload = function() {
             var myModal = new bootstrap.Modal(document.getElementById('exampleModal'), {
                 backdrop: 'static',
                 keyboard: false
@@ -425,11 +476,10 @@
             disableScroll();
 
             // Enable scroll saat modal ditutup
-            document.getElementById('exampleModal').addEventListener('hidden.bs.modal', function () {
+            document.getElementById('exampleModal').addEventListener('hidden.bs.modal', function() {
                 enableScroll();
             });
         };
-
     </script>
 
 
@@ -512,7 +562,7 @@
 
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
+        document.addEventListener("DOMContentLoaded", function() {
             const form = document.querySelector('.wish-form form');
             const wishList = document.querySelector('.wish-comment-list ul');
 
@@ -535,14 +585,14 @@
                     });
             }
 
-            form.addEventListener('submit', function (e) {
+            form.addEventListener('submit', function(e) {
                 e.preventDefault();
                 const formData = new FormData(form);
 
                 fetch('simpan_wish.php', {
-                    method: 'POST',
-                    body: formData
-                })
+                        method: 'POST',
+                        body: formData
+                    })
                     .then(res => res.text())
                     .then(response => {
                         if (response.includes("Sukses")) {
